hphp/hack/test/typecheck/require_once_parse_fail3.php.exp
File "require_once_parse_fail3.php", line 3, characters 1-49:
Toplevel statements besides requires are not allowed in strict files (Parsing[1002])
